website/code/partialsums-icpp-2.log
BUILD COMMANDS FOR: partialsums.icpp-2.icpp

Sat Feb  4 20:41:16 PST 2006

/opt/intel/cc/9.0/bin/icpc -c -O3 -ip -static -unroll  partialsums.icpp-2.c++ -o partialsums.icpp-2.c++.o &&  \
        /opt/intel/cc/9.0/bin/icpc partialsums.icpp-2.c++.o -o partialsums.icpp-2.icpp_run -O3 -ip -static -unroll  
/usr/include/c++/4.0.3/cmath(353): error: identifier "__builtin_powi" is undefined
    { return __builtin_powi(__x, __i); }
             ^

/usr/include/c++/4.0.3/cmath(357): error: identifier "__builtin_powif" is undefined
    { return __builtin_powif(__x, __n); }
             ^

/usr/include/c++/4.0.3/cmath(361): error: identifier "__builtin_powil" is undefined
    { return __builtin_powil(__x, __n); }
             ^

compilation aborted for partialsums.icpp-2.c++ (code 2)
make[2]: [partialsums.icpp-2.icpp_run] Error 2 (ignored)
rm: cannot remove `partialsums.icpp-2.c++.o': No such file or directory
rm: cannot remove `partialsums.icpp-2.o': No such file or directory
make[2]: [partialsums.icpp-2.icpp_run] Error 1 (ignored)

=================================================================
COMMAND LINE (%A is single numeric argument):

partialsums.icpp-2.icpp_run %A
Error, could not exec partialsums.icpp-2.icpp_run 25000 (No such file or directory)
PATH=/opt/shootout/shootout/bench/partialsums:/opt/shootout/shootout/bench/partialsums/tmp:/usr/lib/smarteiffel/bin:/usr/local/Acrobat5/bin:/usr/lib/postgresql/bin:/home/brent/GNUstep/Tools:/usr/local/lib/GNUstep/Local/Tools:/usr/local/lib/GNUstep/Network/Tools:/usr/lib/GNUstep/System/Tools:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
